--- a/src/features/components/favorites.robot.list/fav.robot.list/fav.robot.list.module.css
+++ b/src/features/components/favorites.robot.list/fav.robot.list/fav.robot.list.module.css
@@ -1,3 +1,9 @@
 .favRobot__title {
     font-size: 0;
 }
+
+.favRobot__list {
+    margin: 0.3rem;
+    padding: 0.3rem;
+    border: 1px black solid;
+}
